--- a/ch6_tea_simulations1.qmd
+++ b/ch6_tea_simulations1.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Inference_simulations"
+title: "Inference_simulations1"
 format: html
 editor: visual
 ---
@@ -28,7 +28,6 @@ library(ggplot2) # plotting
 library(ggthemes) # optional, but nice
 ```
 
-
 ## Define the simulation function
 
 This makes "tea data", a tibble (dataframe) where there are a certain number of people in each condition (default = 48, i.e., n_total, with n_total/2 in each half)
@@ -36,6 +35,7 @@ This makes "tea data", a tibble (dataframe) where there are a certain number of 
 The averages of the two conditions are separated by a known effect ("delta") with some variance ("sigma"). You can change these around since we're simulating data!
 
 ## Change the sample size from 48 to 100
+
 ```{r}
 make_tea_data <- function(n_total = 100, sigma = 1.25, delta = 1.5) {
   n_half <- n_total / 2
@@ -50,6 +50,7 @@ make_tea_data <- function(n_total = 100, sigma = 1.25, delta = 1.5) {
 ## Make data frames where we have small or larger samples of tea data for ONE experiment
 
 # Change n_total from 18 and 48 to 36 and 96
+
 ```{r}
 # here's, we're calling our custom functino, and specifying different inputs than the defaults (which are inside the parenthese up above)
 tea_data <- make_tea_data(n_total = 36, delta=1.5)
@@ -70,7 +71,8 @@ mean1 <- tea_data %>%
 
 mean1
 ```
-By changing the sample size, the mean_rating of milk first among the tea data decreases from 5.11 to 5.00, while that of tea first increases from 3.78 to 3.94. 
+
+By changing the sample size, the mean_rating of milk first among the tea data decreases from 5.11 to 5.00, while that of tea first increases from 3.78 to 3.94.
 
 ```{r}
 mean2 <- tea_data_highn %>%
@@ -79,14 +81,15 @@ mean2 <- tea_data_highn %>%
 
 mean2
 ```
-By changing the sample size, the mean_rating of milk first among the tea_highn data decreases from 5.04 to 4.67, while that of tea first increases from 3.46 to 3.56. 
+
+By changing the sample size, the mean_rating of milk first among the tea_highn data decreases from 5.04 to 4.67, while that of tea first increases from 3.46 to 3.56.
 
 ## In this first draw, was it significant with N=9 or N=24 per group?
 
 OK, we can do t-tests already! I've done these within a pipe (whoops, I often use the old pipe operator because I have small hands)
 
-To do: Run these and look at the outputs by posting `out_low_n` in the console
-o
+To do: Run these and look at the outputs by posting `out_low_n` in the console o
+
 ```{r}
 out_low_n <- tea_data %>%
   t.test(rating ~ condition, data = ., paired = FALSE, var.equal = TRUE) 
@@ -98,12 +101,14 @@ out_high_n <- tea_data_highn %>%
 ```{r}
 out_low_n
 ```
-The p-value decreased from 0.057 (n_total = 18) to 0.012 (n_total = 36), indicating stronger evidence against the null hypothesis with the larger sample size. The confidence interval and degrees of freedom suggest more precision and accuracy in the estimates. 
+
+The p-value decreased from 0.057 (n_total = 18) to 0.012 (n_total = 36), indicating stronger evidence against the null hypothesis with the larger sample size. The confidence interval and degrees of freedom suggest more precision and accuracy in the estimates.
 
 ```{r}
 out_high_n
 ```
-Similarly, the p-value decreases, showing stronger evidence of differences provided by a larger sample size. Also, higher precision and accuracy are suggested. 
+
+Similarly, the p-value decreases, showing stronger evidence of differences provided by a larger sample size. Also, higher precision and accuracy are suggested.
 
 ### Simulate 1000 experiments
 
@@ -112,6 +117,7 @@ To do: Run these code blocks
 ...where you have 18 participants per experiment with an average difference of 1.5 points in tea deliciousness on average
 
 ## Change n_total from 18 to 36
+
 ```{r}
 samps <- tibble(sim = 1:1000) |> # 
   mutate(data = map(sim, \(i) make_tea_data(n_total = 36, delta=1.5))) |>  # simulate
@@ -121,6 +127,7 @@ samps <- tibble(sim = 1:1000) |> #
 ...where you have 48 participants per experiment
 
 ## Change n_total from 48 to 96
+
 ```{r}
 samps_highn <- tibble(sim = 1:1000) |> # 
   mutate(data = map(sim, \(i) make_tea_data(n_total = 96, delta=1.5))) |>  # simulate
@@ -143,7 +150,8 @@ tea_data_summary <- samps |>
 ```{r}
 tea_data_summary
 ```
-When the sample size increases, I do see some changes in the estimation of mean difference, but it is hard to tell the patterns of changing. 
+
+When the sample size increases, I do see some changes in the estimation of mean difference, but it is hard to tell the actual patterns of changing.
 
 ```{r}
 tea_data_highn_summary <- samps_highn |>
@@ -157,7 +165,8 @@ tea_data_highn_summary <- samps_highn |>
 ```{r}
 tea_data_highn_summary
 ```
-Same as above 
+
+Same as above
 
 ## Plot difference for low-n
 
@@ -174,6 +183,7 @@ Or simply
 ```{r}
 hist(tea_data_summary$delta)
 ```
+
 Comparing to the small sample size (n_total = 18), the larger sample size (n_total = 36) suggest decrease in variability in the estimate of mean difference. The estimates are more consistent across simulations.
 
 ## Plot difference for higher-n
@@ -183,7 +193,8 @@ To do: What's different about this distribution vs the one we just plotted?
 ```{r}
 hist(tea_data_highn_summary$delta)
 ```
-When n_total = 96, the estimates are more consistent, and should be closer to the true population mean difference. 
+
+When n_total = 96 (changed from n_total = 48), the estimates are more consistent, and should be closer to the true population mean difference.
 
 **Bonus** What happens if you run it again? Try varying the variance / mean of the effect when you change the "delta" and "sigma" values?
 
@@ -197,7 +208,7 @@ To do: Where in the function is it specifying that there is no difference betwee
 
 ```{r}
 null_model <- tibble(sim = 1:1000) |>
-  mutate(data = map(sim, \(i) make_tea_data(n_total = 18, delta = 0))) |>
+  mutate(data = map(sim, \(i) make_tea_data(n_total = 36, delta = 0))) |>
   unnest(cols = data)
 
 null_model_summary <- null_model |>
@@ -216,6 +227,8 @@ ggplot(data=null_model_summary, aes(x=delta)) +
   geom_histogram(alpha=.8, bins=20) +
   theme_few()
 ```
+
+When the sample size increases, the variability decreases.
 
 # Permutations
 
@@ -248,6 +261,8 @@ To do: what does this histogram look like and why?
 hist(tea_data_highn_shuffled_summary$delta) #what does this histogram look like?
 ```
 
+When the sample size increases, the shuffled mean differences are more stable since the distributions are tighter.
+
 ### Visualizing what happens when we shuffle
 
 OK, now see what happens to our raw data -- this is just from one simulation The color refers to the ORIGINAL label before we shuffled, but our condition difference is gone
@@ -273,6 +288,8 @@ ggplot(data = tea_data_highn_shuffled %>% filter(sim==3),  # can change the actu
                      labels = 0:10,
                      limits = c(0, 10))
 ```
+
+When the sample size increases, the distribution of data points are relatively tighter.
 
 The idea is now that we can get a sampling distribution of the difference in the means between the two conditions (assuming that the null hypothesis were true), by randomly shuffling the labels and calculating the difference in means (and doing this many times). What we get is a distribution of the differences we would expect, if there was no effect of condition.
 
@@ -301,6 +318,7 @@ ggplot(data = tea_data_highn_shuffled_summary, aes(x=delta)) +
   
 
 ```
+When the sample size increases, the separation between the actual difference and the null distribution seems to have decreased. 
 
 And we can then simply calculate the p-value by using some basic data wrangling (i.e. finding the proportion of differences that were as or more extreme than the one we observed).
 
@@ -317,6 +335,7 @@ ggplot(data=tea_data_highn_shuffled_summary, aes(x=delta)) +
   geom_histogram(alpha=.8, bins=20, data=tea_data_highn_summary)
   theme_few()
 ```
+When the sample size increases, the null distribution becomes narrower, and the null distribution stands out more clearly from the empirical distribution
 
 # Confidence intervals
 
@@ -377,6 +396,7 @@ tea_ci_upper_ttest <- delta_hat + tea_se * qt(0.975,df)
 # Now the calculated CIs match those in the t-test outputs!
 t.test(tea_ratings, milk_ratings, var.equal=TRUE)
 ```
+When the sample size increased, the results appear to be more generalizable due to the increased precision and reduced variability.
 
 ## Going to plot CIs for each condition
 
@@ -417,6 +437,7 @@ ggplot(data = tea_data_highn, aes(x=condition, y=rating, col=condition))  +
   ggtitle('Tea ratings across condition with SE')
 
 ```
+When the sample size increases, the confidence interval becomes narrower and the mean ratings are more stabalized. 
 
 To do: What does each dot represnet? What does the range represent in each graph? What does the confidence interval indicate? What does the SE indicate?
 
@@ -459,6 +480,7 @@ ggplot(all_results, aes(x = pvalue)) +
 
 false_positive_rate <- mean(all_results$pvalue < 0.05)
 ```
+I did not see any very significant difference. But when the sample size increases, there should be a narrower distribution and more clustering of p-values near 1.00
 
 ## Now for an experiment when there is actually an effect
 
@@ -490,18 +512,4 @@ ggplot(all_results_high_n, aes(x = pvalue)) +
 fail_to_reject_rate <- mean(all_results_high_n$pvalue > 0.05)
 ```
 
-# To finish up
-
-Publish this to an rpubs (time to set up if you haven't!)
-
-# Excercises
-
-1.  Now go back (earlier in the code) and modify the DELTA in the simulation functions to be smaller so that there is only a small difference between groups. Is it still significant?
-
-2.  Rewrite this code with the the smaller sample size simulations. What changes?
-
-3.  Save out plots to your computer using "ggsave". You might need to query the function in R
-
-4.  Try some different plotting functions! https://rstudio.github.io/cheatsheets/html/data-visualization.html
-
-5.  
+When the sample size increases, there appear to be a more polarized distribution, which means more p-values clustering around 0.
