--- a/ch9_measurement.qmd
+++ b/ch9_measurement.qmd
@@ -94,6 +94,7 @@ ggplot(data = tea_data1,aes(x = rating, y = rating_exp2)) +
   labs(x = "First Experiment Rating",
        y = "Second Experiment Rating")
 ```
+
 ```{r}
 ggplot(data = tea_data1, aes(x = rating, y = rating_exp2)) +
   geom_jitter(width = 0.2, height = 0.2, alpha = 0.6) +
@@ -101,7 +102,6 @@ ggplot(data = tea_data1, aes(x = rating, y = rating_exp2)) +
   labs(x = "First Experiment Rating",
        y = "Second Experiment Rating")
 ```
-
 
 Hint: 1. Try out `geom_point` which shows you the exact values 2. Then try out `geom_jitter` which shows you the same data with some jitter around height / width
 
@@ -126,12 +126,18 @@ Hint aes(group = sub_id))
 ```{r}
 # YOUR CODE HERE
 # Make new, longer dataframe 
-
+tea_data_long <- tea_data1 %>%
+  mutate(sub_id = row_number()) %>%
+  pivot_longer(cols = c(rating, rating_exp2), names_to = "experiment", values_to = "rating")
 ```
 
 ```{r}
 # YOUR PLOTTING CODE HERE
-
+ggplot(tea_data_long, aes(x = experiment, y = rating, group = sub_id, col = condition)) +
+  geom_line() +
+  geom_point() +
+  facet_wrap(~condition) +
+  labs(x = "Experiment", y = "Rating")
 ```
 
 # 5. OK, now go back and change things and test your intuition about how this works.
@@ -146,6 +152,44 @@ Hint: copy the code from above where you made your new dataframe with experiment
 
 ```{r}
 # YOUR CODE HERE
+tea_data <- make_tea_data(n_total = 100, delta = 2, sigma = 2)
+tea_data1 <- tea_data %>%
+  rowwise() %>%
+  mutate(
+    rating_exp2 = rating + sample(-3:3, 1),
+    difference = rating_exp2 - rating
+  ) %>%
+  ungroup()
 
-
+cor.test(tea_data1$rating, tea_data1$rating_exp2)
 ```
+When I increased sigma to 2, the correlation dropped to 0.7083 with a 95% confidence interval of [0.595, 0.794].
+
+```{r}
+tea_data1 <- tea_data %>%
+  rowwise() %>%
+  mutate(
+    rating_exp2 = rating + sample(-5:5, 1),
+    difference = rating_exp2 - rating
+  ) %>%
+  ungroup()
+
+cor.test(tea_data1$rating, tea_data1$rating_exp2)
+```
+When I expand the variation between the first and second experiment, correlation dropped to 0.5606 with a 95% confidence interval of [0.457, 0.649].
+
+```{r}
+tea_data <- make_tea_data(n_total = 200, delta = 2, sigma = 2)
+
+tea_data1 <- tea_data %>%
+  rowwise() %>%
+  mutate(
+    rating_exp2 = rating + sample(-3:3, 1),
+    difference = rating_exp2 - rating
+  ) %>%
+  ungroup()
+
+cor.test(tea_data1$rating, tea_data1$rating_exp2)
+```
+
+When I increase the sample size, correlation raised to 0.7819 with a 95% confidence interval of [0.721, 0.831].
