--- a/ggplot_excercises/ggplot_inclass_step1.qmd
+++ b/ggplot_excercises/ggplot_inclass_step1.qmd
@@ -427,6 +427,29 @@ include_graphics("figures/vis1_practice_plot3.png")
 
 ```{r}
 # make advanced practice plot 3 here
+ggplot(df.diamonds, aes(x = color, 
+                        y = price, 
+                        group = clarity, 
+                        color = clarity)) +
+  stat_summary(fun = "mean", 
+               geom = "line", 
+               size = 1) +
+  stat_summary(fun = "mean", 
+               geom = "point", 
+               size = 2, 
+               shape = 21, 
+               fill = "white") + 
+  stat_summary(fun.data = "mean_cl_boot", 
+               geom = "errorbar", 
+               size = 0.8, 
+               width = 0) +
+  labs(x = "Color", y = "Price") +
+  scale_color_viridis_d(option = "D", end = 0.9) + 
+  theme_minimal() +
+  theme(
+    panel.grid.major.x = element_line(color = "grey", linetype = "dotted"),
+    panel.grid.major.y = element_blank(),
+    panel.grid.minor = element_blank())
 ```
 
 ```{r practice-plot3a, out.width="90%", fig.align="center", fig.cap="Practice plot 3.", out.width="95%"}
@@ -550,6 +573,24 @@ Recreate the plot shown in Figure \@ref(fig:practice-plot4).
 
 ```{r}
 # make practice plot 4 here
+ggplot(data = df.diamonds,
+       mapping = aes(y = price,
+                     x = color,
+                     fill = cut)) +
+  stat_summary(fun = "mean",
+               geom = "bar",
+               position = "dodge",
+               color = "black") +
+  stat_summary(fun.data = "mean_cl_boot",
+               geom = "errorbar",
+               position = position_dodge(width = 0.9),
+               width = 0.2) + 
+  facet_grid(rows = vars(clarity)) +
+  labs(x = "Color", 
+       y = "Price", 
+       title = "Diamond Price by Color, Cut, and Clarity") +
+  scale_fill_viridis_d(option = "D", end = 0.9) 
+
 ```
 
 ```{r practice-plot4, fig.align="center", fig.cap="Practice plot 4.", out.width="95%"}
